# data-algorithms-with-pyspark

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
conf/: log4j2.properties
scripts/: ensure-java.sh  ensure-poetry.sh  ensure-python.sh
src/chapter_01/: README.md
src/chapter_01/data/: census_2010.json  people.csv
src/chapter_01/examples/: average_by_key_reducebykey.py  dataframe_basics.py  etl_census_dataframe.py  rdd_map_transformation.py  rdd_transformations_overview.py
src/chapter_02/: README.md
src/chapter_02/data/: sample.fasta
src/chapter_02/examples/: dna_base_count_basic.py  dna_base_count_mappartitions.py  dna_base_count_ver_1.py  dna_base_count_ver_2.py  dna_base_count_ver_3.py
src/chapter_03/: README.md
src/chapter_03/data/: sample_numbers.txt
src/chapter_03/examples/: map_vs_flatmap.py  mappartitions_transformation.py  mapvalues_transformation.py
src/chapter_04/: README.md
src/chapter_04/data/: ratings.csv
src/chapter_04/examples/: movie_avg_rating.py  reduction_warmup.py
src/chapter_05/: README.md
src/chapter_05/data/: transactions.csv
src/chapter_05/examples/: partition_basics.py  physical_partitioning.py
src/chapter_06/: README.md
src/chapter_06/data/: airports.csv  flights.csv  (+1 more)
src/chapter_07/: README.md
src/chapter_08/: README.md
src/chapter_09/: README.md
src/chapter_10/: README.md
src/chapter_11/: README.md
src/chapter_12/: README.md
src/common/: data_loader.py  spark_session.py
tests/: conftest.py  test_common.py  test_smoke.py
(+40 files in other folders)
